; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_service.c_service_extend_event_source_timeout.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_service.c_service_extend_event_source_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [68 x i8] c"Failed to retrieve timeout time for event source '%s', ignoring: %m\00", align 1
@.str.1 = private unnamed_addr constant [61 x i8] c"Failed to set timeout time for even source '%s', ignoring %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*, i64)* @service_extend_event_source_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @service_extend_event_source_timeout(%struct.TYPE_5__* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = call i32 @assert(%struct.TYPE_5__* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  br label %54

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @sd_event_source_get_time(i32* %17, i64* %7)
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %32

21:                                               ; preds = %16
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @sd_event_source_get_description(i32 %24, i8** %9)
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = call i32 @UNIT(%struct.TYPE_5__* %26)
  %28 = load i32, i32* %8, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @strna(i8* %29)
  %31 = call i32 @log_unit_warning_errno(i32 %27, i32 %28, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %54

32:                                               ; preds = %16
  %33 = load i64, i64* %7, align 8
  %34 = load i64, i64* %6, align 8
  %35 = icmp sge i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  br label %54

37:                                               ; preds = %32
  %38 = load i32*, i32** %5, align 8
  %39 = load i64, i64* %6, align 8
  %40 = call i32 @sd_event_source_set_time(i32* %38, i64 %39)
  store i32 %40, i32* %8, align 4
  %41 = load i32, i32* %8, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %54

43:                                               ; preds = %37
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @sd_event_source_get_description(i32 %46, i8** %10)
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %49 = call i32 @UNIT(%struct.TYPE_5__* %48)
  %50 = load i32, i32* %8, align 4
  %51 = load i8*, i8** %10, align 8
  %52 = call i32 @strna(i8* %51)
  %53 = call i32 @log_unit_warning_errno(i32 %49, i32 %50, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0), i32 %52)
  br label %54

54:                                               ; preds = %15, %21, %36, %43, %37
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i32 @sd_event_source_get_time(i32*, i64*) #1

declare dso_local i32 @sd_event_source_get_description(i32, i8**) #1

declare dso_local i32 @log_unit_warning_errno(i32, i32, i8*, i32) #1

declare dso_local i32 @UNIT(%struct.TYPE_5__*) #1

declare dso_local i32 @strna(i8*) #1

declare dso_local i32 @sd_event_source_set_time(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
